--- a/styles/tab-controls.css
+++ b/styles/tab-controls.css
@@ -41,6 +41,7 @@
     &:active, &[data-active="true"] {
       transform: translate(-17px, 0);
       box-shadow: 0px 0px 10px 0px var(--bg) inset;
+      opacity: 60%;
     }
   }
 }
